# routes/signup.js
@@ -1,0 +1,12 @@
+const router = require('express').Router();
+const signupController = require('../controllers/signup');
+
+router.post(
+  '/',
+  /* 
+    #swagger.tags = ['Management System']
+  */
+  signupController.signupUser
+);
+
+module.exports = router;
